--- a/user.yml
+++ b/user.yml
@@ -289,7 +289,7 @@ login:
     - collection.listing: [user, $email, roles: role ]
     - collection.update: [user, identifier: $email, attempts: 0]
     - read_server: [HTTP_USER_AGENT,REMOTE_ADDR,REMOTE_HOST,REQUEST_URI]
-    - collection.insert: [session, /sha1(last_insert_id()), user: $email, start_time: /sysdate(6), HTTP_USER_AGENT, REMOTE_ADDR,REQUEST_URI]
+    - collection.insert: [session, /sha1(last_insert_id()), user: $email, partner, start_time: /sysdate(6), HTTP_USER_AGENT, REMOTE_ADDR,REQUEST_URI]
     - write_session: [sid: $new_session_id, roles]
     - close_dialog
     - redirect: /$start_page
