--- a/.htaccess
+++ b/.htaccess
@@ -2,6 +2,6 @@ Require all granted
 Options +Indexes
 RewriteEngine on
 RewriteRule ^index\.(php|html?)$ index.php [L]
-RewriteRule ^(\w+[\w\/]*)(\?.*)?$ index.php?path=$1&$2
+RewriteRule ^(\w+[\w\/]*)(?:\?(.+))?$ index.php?path=$1&$2 [NC,L,QSA]
 RewriteRule \.(yml|conf)$ - [R=404,NC,L]
 RewriteRule ^\.git(/?|/.*)$ - [R=404,NC,L]
