--- a/error_page.yml
+++ b/error_page.yml
@@ -1,12 +1,19 @@
 ---
 error_page:
-  type: labelled_input_page
+  type: info_page
   name: Unexpected Error
-  width: 630
+  class: [center-contents pad-xxlarge col s12 m6 l4]
   position: { my: 'top', at: 'top+100' }
-  desc: |
-    An unexpected error occurred while processing your results. <br>
-    Please notify the system administrator of this incident.
+  lines:
+    - type: p
+    - unexpected_error
   actions:
     - home
     - close: { action: close_dialog }
+  actions_pane:
+    class: [pad-xxlarge, grid space s1 m2 l2]
+
+unexpected_error:
+  name: >
+    An unexpected error occurred while processing your results.
+    Please notify the system administrator of this incident.
