--- a/coming_soon.yml
+++ b/coming_soon.yml
@@ -1,11 +1,11 @@
-comming_soon:
+coming_soon:
   type: info_page
-  lines: [comming_soon_message]
+  lines: [coming_soon_message]
   actions_pane: { class: [pad-jumbo, grid s1 m1 l1]}
   actions: [home]
 
-comming_soon_message:
+coming_soon_message:
   type: p
   mutable: false
   class: [font-xlarge,center-text]
-  name: Comming Soon...<br><br>Watch this space!
+  name: Coming Soon...<br><br>Watch this space!
