--- a/controls.yml
+++ b/controls.yml
@@ -838,7 +838,7 @@ vspace:
   template: none
   attr: { id: "" }
   class: [clear-after,widest]
-  style: {padding-bottom: $space,display: block, float: none}
+  style: {padding-bottom: $space}
 
 vspaced:
   space: 6px
