--- a/mysite.local.conf
+++ b/mysite.local.conf
@@ -10,4 +10,9 @@
     Allow from all
     Require all granted
   </Directory>
+
+  <IfModule mpm_itk_module>
+     AssignUserId mysite-user mysite-user
+  </IfModule>
+
 </VirtualHost>
