--- a/confirm_dialog.yml
+++ b/confirm_dialog.yml
@@ -9,11 +9,11 @@ confirm_dialog:
     name: "Are you sure?"
   lines: [$message]
   actions_pane:
-    class: [pad-xxlarge, grid space s1 m2 l2]
+    class: [pad pad-large, grid space s1 m2 l2]
   actions:
     - "yes": {class: [brand-action-success]}
     - "no": { action: close_dialog,class: [brand-action-cancel]}
   modal:
     dialog:
-      class: { class: [col s9 m4 l3]}
+      class: [col s9 m4 l3]
       close_button: ""
